k8s/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: arm-fe
  labels:
    app: arm-fe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: arm-fe
  template:
    metadata:
      labels:
        app: arm-fe
    spec:
      containers:
      - name: arm-fe
        image: 654654435122.dkr.ecr.ap-southeast-1.amazonaws.com/arm-fe-repo:v1
        ports:
        - containerPort: 80
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
          runAsNonRoot: true
          runAsUser: 10001
          runAsGroup: 10001
          readOnlyRootFilesystem: true
          seccompProfile:
            type: RuntimeDefault
        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
          requests:
            cpu: "250m"
            memory: "256Mi"
