k8s/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: arm-fe
  labels:
    app: arm-fe
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: arm-fe
  type: ClusterIP
